--- a/README
+++ b/README
@@ -1,92 +1,54 @@
 
-	    Getting started with the Userland Consolidation
+	    This is the Pluribus Userland Consolidation for
+                   Pluribus OpenSolaris Environment
 
-
-Getting Started
-
-    This README provides a very brief overview of the gate, how to retrieve
-    a copy, and how to build it.  Detailed documentation about the Userland
-    gate can be found in the 'doc' directory.  Questions or comments about
-    the gate can be addressed to oi-dev@openindiana.org. 
 
 Overview
 
-    The Userland consolidation maintains a Git repository at
+    The Pluribus Userland Git repository is available at the URL below:
 
-	https://github.com/OpenIndiana/oi-userland 
+	https://github.com/PluribusNetworks/pluribus_userland.git
 
     This gate contains build recipies, patches, IPS manifests, etc. necessary
     to download, prep, build, test, package and publish open source software.
-    The build infrastructure is similiar to that of the SFW consolidation in
-    that it makes use of herarchical Makefiles which provide dependency and
-    recipe information for building the components.  In order to build the
-    contents of the Userland gate, you need to clone it.  Since you are
-    reading this, you probably already have.
+
+    This gate is a partial fork of the OpenIndiana Userland repository
+    found at the URL below:
+
+        https://github.com/OpenIndiana/oi-userland/
 
 Getting the Bits
 
-    As mentioned, the gate is stored in a Git repository.  In order to
-    build or develop in the gate, you will need to clone it.  You can do so
-    with the following command
-    
-      $ git clone https://github.com/OpenIndiana/oi-userland.git /scratch/clone
+    You can clone the git repo:
+
+      $ git clone https://github.com/PluribusNetworks/pluribus_userland.git pn_userland
 
     This will create a replica of the various pieces that are checked into the
-    source code management system, but it does not retrieve the community
-    source archives associated with the gate content.  To download the
-    community source associated with your cloned workspace, you will need to
-    execute the following:
-
-      $ cd /scratch/clone/components
-      $ gmake download
-
-    This will use GNU make and the downloading tool in the gate to walk through
-    all of the component directories downloading and validating the community
-    source archives from the gate machine or their canonical source repository.
-
-    There are two variation to this that you may find interesting.  First, you
-    can cause gmake(1) to perform it's work in parallel by adding '-j (jobs)'
-    to the command line.  Second, if you are only interested in working on a
-    particular component, you can change directories to that component's
-    directory and use 'gmake download' from that to only get it's source
-    archive.
+    source code management system.
 
 Building the Bits.
 
-    You can build individual components or the contents of the entire gate.
+    You can build individual components. At present building the entire gate
+    with one make invovation is not yet possible but this will be rectified
+    going forward.
 
-  Component build
+  Building one component
 
-    If you are only working on a single component, you can just build it using
-    following:
+    A script is provided to easily build a single component and setup the repo.
 
       setup the workspace for building components
 
-        $ cd (your-workspace)/components ; gmake setup
+        $ cd (your-workspace); ./build.sh (component name)
 
-      build the individual component
 
-        $ cd (component-dir) ; gmake publish
+      So if you have cloned to pn_userland and trying to build curl, the
+      invocation will be like this:
 
-  Complete Top Down build  
+        $ cd pn_userland; ./build.sh curl
 
-    Complete top down builds are also possible by simply running
+      Note that components/curl is not specified. Some components has further
+      subdirectories with multiple variants/versions. One example is OpenSSL.
+      You need to specify the component directory and subdirectory you need to
+      build:
 
-      $ cd (your-workspace)/components
-      $ gmake publish
-
-    The 'publish' target will build each component and publish it to the
-    workspace IPS repo.
-    Tools to help facilitate build zone creation will be integrated
-    shortly.  If the zone you create to build your workspace in does not have
-    networking enabled, you can pre-download any community source archives into
-    your workspace from the global with:
-
-      $ cd (your-workspace)/components
-      $ gmake download
-
-  You can add parallelism to your builds by adding '-j (jobs)' to your gmake
-  command line arguments.
-
-  The gate should only incrementally build what it needs to based on what has
-  changed since you last built it.
+        $ cd pn_userland; ./build.sh openssl/openssl-1.0.2
